fixed x axis scrollbar covering footer

--- a/src/scss/components/_code-generator.scss
+++ b/src/scss/components/_code-generator.scss
@@ -52,12 +52,13 @@
 }
 
 .morse-container {
-  z-index: 1;
+  z-index: 0;
   height: 33vh;
   width: 100vw;
   text-align: left;
-  background: $primary;
+  background: red;
   border-radius: 20px;
-  overflow-x: scroll;
+  overflow: overlay;
   overflow-wrap: break-word;
+  padding: 20px;
 }
